--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -61,6 +61,11 @@ doctrine:
                 alias: GedmoTree # (optional) it will default to the name set for the mapping
                 is_bundle: false
 
+stof_doctrine_extensions:
+    orm:
+        default:
+            tree: true
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: '%mailer_transport%'
