--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -15,6 +15,11 @@ monolog:
             path: '%kernel.logs_dir%/%kernel.environment%.log'
             level: debug
             channels: ['!event']
+        doctrine:
+            type: stream
+            path: '%kernel.logs_dir%/doctrine_%kernel.environment%.log'
+            level: debug
+            channels: doctrine
         console:
             type: console
             process_psr_3_messages: false
