--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "doctrine/orm": "^2.5",
         "gedmo/doctrine-extensions": "^2.4",
         "incenteev/composer-parameter-handler": "^2.0",
+        "ocramius/proxy-manager": "^2.2",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
